@@ -14,7 +14,7 @@
     </organization>
 
     <properties>
-        <oap.maven.project.version>17.3.3.0</oap.maven.project.version>
+        <oap.maven.project.version>17.3.4.0</oap.maven.project.version>
 
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -45,6 +45,8 @@
                     <compilerArgs>
                         <arg>-parameters</arg>
                         <arg>-Xlint:unchecked</arg>
+                        <arg>--add-modules</arg>
+                        <arg>java.xml</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
